Added the basic html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,45 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>World Clock</h1>
-    <footer>
-      This project was coded with ❤️ by Tiana James
-      <a href=""> and is open-sourced on GitHub</a>
+    <div class="container">
+
+        <h1>World Clock</h1>
+
+<select>
+    <option value="">Select a city</option>
+    <option value="">London</option>
+    <option value="">Paris</option>
+    <option value="">Tokyo</option>
+
+
+</select>
+<div class="city">
+    <h2> Prague🇨🇿</h2>
+    <div class="date">April 4,2024</div>
+    <div class="time">2:56PM</div>
+</div>
+    <div class="city">
+        <h3>Cairo🇪🇬</h3>
+        <div class="date">April 4,2024</div>
+        <div class="time">2:56PM</div>
+        </div>
+
+        <div class="city">
+            <h4>Ocho Rios🇯🇲</h4>
+        <div class="date">April 4,2024</div>
+        <div class="time">2:56PM</div>
+
+    </div>
+    
+</div>
+
+
+        <footer>
+            This project was coded with ❤️ by Tiana James
+            <a href="https://github.com/TianaxJames/world-clock">
+                and is open-sourced on GitHub</a
+                >
+            </div>
     </footer>
     <script src="src/index.js"></script>
   </body>
