Added styling with CSS

--- a/index.html
+++ b/index.html
@@ -19,21 +19,30 @@
 
 
 </select>
+
 <div class="city">
-    <h2> Prague🇨🇿</h2>
-    <div class="date">April 4,2024</div>
-    <div class="time">2:56PM</div>
+        <div>
+        <h2> Prague🇨🇿</h2>
+        <div class="date">April 4,2024</div>
+    </div>
+        <div class="time">2:56:15<small>PM</small></div>
 </div>
     <div class="city">
-        <h3>Cairo🇪🇬</h3>
-        <div class="date">April 4,2024</div>
-        <div class="time">2:56PM</div>
+        <div>
+
+            <h3>Cairo🇪🇬</h3>
+            <div class="date">April 4,2024</div>
+        </div>
+        <div class="time">2:56:15<small>PM</small></div>
         </div>
 
         <div class="city">
-            <h4>Ocho Rios🇯🇲</h4>
-        <div class="date">April 4,2024</div>
-        <div class="time">2:56PM</div>
+            <div>
+
+                <h4>Ocho Rios🇯🇲</h4>
+                <div class="date">April 4,2024</div>
+            </div>
+        <div class="time">2:56:15<small>PM</small></div>
 
     </div>
     
@@ -41,7 +50,7 @@
 
 
         <footer>
-            This project was coded with ❤️ by Tiana James
+            This project was coded with ❤️ by <strong>Tiana James</strong> 
             <a href="https://github.com/TianaxJames/world-clock">
                 and is open-sourced on GitHub</a
                 >
