Added initial JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Clock</title>
     <link rel="stylesheet" href="src/style.css" />
-  </head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
+</head>
   <body>
     <div class="container">
 
@@ -20,29 +22,29 @@
 
 </select>
 
-<div class="city">
+<div class="city" id="prague">
         <div>
         <h2> Prague🇨🇿</h2>
-        <div class="date">April 4,2024</div>
+        <div class="date"></div>
     </div>
-        <div class="time">2:56:15<small>PM</small></div>
+        <div class="time"></div>
 </div>
-    <div class="city">
+    <div class="city" id="cairo">
         <div>
 
             <h3>Cairo🇪🇬</h3>
-            <div class="date">April 4,2024</div>
+            <div class="date"></div>
         </div>
-        <div class="time">2:56:15<small>PM</small></div>
+        <div class="time"></div>
         </div>
 
-        <div class="city">
+        <div class="city" id="ocho-rios">
             <div>
 
                 <h4>Ocho Rios🇯🇲</h4>
-                <div class="date">April 4,2024</div>
+                <div class="date"></div>
             </div>
-        <div class="time">2:56:15<small>PM</small></div>
+        <div class="time"></div>
 
     </div>
     
