--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
 
 <select id="city">
     <option value="">Select a city</option>
-    <option value="Pacific/Honolulu
-">Honolulu</option>
-    <option value="Europe/Paris
-">Paris</option>
-    <option value="Asia/Tokyo
-">Tokyo</option>
+    <option value="current">My current location</option>
+    <option value="Pacific/Honolulu">Honolulu</option>
+    <option value="Asia/Tokyo">Tokyo</option>
 
 
 </select>
